Refactor dashboard with React and Vite

--- a/mock_dashboard/index.html
+++ b/mock_dashboard/index.html
@@ -1,222 +1,12 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ocean Settlements – Environmental Dashboard</title>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; font-src 'self' data:; connect-src 'self'; frame-ancestors 'self'">
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <header class="topbar">
-    <div class="brand">
-      <div class="logo" aria-hidden="true">🌊</div>
-      <div class="titles">
-        <h1>Ocean Settlements</h1>
-        <p class="subtitle">Environmental Impact Monitoring – Mock Trial Exhibit A</p>
-      </div>
-    </div>
-    <div class="context">
-      <span class="badge danger">Class Action: Ocean Habitat vs. Aquaterra Corp.</span>
-      <span class="badge">Year <span id="year-badge">2041</span></span>
-    </div>
-  </header>
-
-  <main class="layout">
-    <aside class="panel info">
-      <h2>Scenario Context</h2>
-      <p>
-        Following extreme sea‑level rise and land heat events, underwater cities are being 3D‑printed to house displaced populations. This dashboard presents fictional monitoring data referenced during the mock trial assessing alleged environmental damages.
-      </p>
-      <ul class="facts">
-        <li><strong>Habitats online:</strong> 37 underwater districts</li>
-        <li><strong>Artificial reefs:</strong> 612 modules installed</li>
-        <li><strong>Fishing zones:</strong> 128 regulated grids</li>
-      </ul>
-      <div class="legend">
-        <span><i class="dot green"></i> Safe</span>
-        <span><i class="dot yellow"></i> Caution</span>
-        <span><i class="dot red"></i> Critical</span>
-      </div>
-      <hr class="sep"/>
-      <div class="notes">
-        <strong>Note:</strong> Data shown is fictional and curated to illustrate arguments about toxification, overfishing risk, and reef structure impacts.
-      </div>
-    </aside>
-
-    <section class="controls panel">
-      <div class="filters">
-        <label>
-          Region
-          <select id="filter-region">
-            <option value="all" selected>All Oceans</option>
-            <option value="na">North Atlantic</option>
-            <option value="sa">South Atlantic</option>
-            <option value="wp">West Pacific</option>
-            <option value="ep">East Pacific</option>
-            <option value="ind">Indian</option>
-            <option value="arc">Arctic</option>
-            <option value="sou">Southern</option>
-          </select>
-        </label>
-        <label class="year">
-          Year
-          <input id="filter-year" type="range" min="2038" max="2042" step="1" value="2041" />
-          <span id="year-label">2041</span>
-        </label>
-        <label>
-          Scenario
-          <select id="filter-scenario">
-            <option value="baseline">Baseline</option>
-            <option value="mitigation">Mitigation</option>
-            <option value="expansion">Rapid Expansion</option>
-          </select>
-        </label>
-        <button id="btn-randomize" class="btn">Randomize Mock Data</button>
-        <button id="toggle-theme" class="btn">Toggle Theme</button>
-      </div>
-    </section>
-
-    <section class="grid">
-      <div class="card wide">
-        <div class="card-header">
-          <h3>Key Indicators</h3>
-          <div class="meta">A snapshot of system health</div>
-        </div>
-        <div class="kpi-row">
-          <div class="kpi-card">
-            <div class="kpi-title">Avg Toxin Index</div>
-            <div class="kpi-value" id="kpi-toxin">—</div>
-            <canvas class="spark" id="spark-toxin"></canvas>
-          </div>
-          <div class="kpi-card">
-            <div class="kpi-title">Fish Stock Health</div>
-            <div class="kpi-value" id="kpi-fish">—</div>
-            <canvas class="spark" id="spark-fish"></canvas>
-          </div>
-          <div class="kpi-card">
-            <div class="kpi-title">O2 at 200m</div>
-            <div class="kpi-value" id="kpi-o2">—</div>
-            <canvas class="spark" id="spark-o2"></canvas>
-          </div>
-          <div class="kpi-card">
-            <div class="kpi-title">Compliance Score</div>
-            <div class="kpi-value" id="kpi-compliance">—</div>
-            <canvas class="spark" id="spark-comp"></canvas>
-          </div>
-        </div>
-      </div>
-
-    <section class="grid">
-      <div class="card wide">
-        <div class="card-header">
-          <h3>Global Toxin Index</h3>
-          <div class="meta">Composite of heavy metals, microplastics, nitrates (mock)</div>
-        </div>
-        <canvas id="toxinsChart" height="100"></canvas>
-      </div>
-
-      <div class="card">
-        <div class="card-header">
-          <h3>Sea Temperature Distribution</h3>
-          <div class="meta">Surface vs. 200m depth (°C)</div>
-        </div>
-        <canvas id="tempChart" height="100"></canvas>
-      </div>
-
-      <div class="card">
-        <div class="card-header">
-          <h3>Fish Biomass by Region</h3>
-          <div class="meta">Relative biomass vs. 2035 baseline</div>
-        </div>
-        <canvas id="fishChart" height="100"></canvas>
-      </div>
-
-      <div class="card wide">
-        <div class="card-header">
-          <h3>Map: Risk Heatmap (Mock)</h3>
-          <div class="meta">Higher intensity indicates greater environmental stress</div>
-        </div>
-        <div id="map" class="map"></div>
-      </div>
-
-      <div class="card">
-        <div class="card-header">
-          <h3>Reef Module Health</h3>
-          <div class="meta">% modules meeting biofouling & structural targets</div>
-        </div>
-        <canvas id="reefChart" height="100"></canvas>
-      </div>
-
-      <div class="card">
-        <div class="card-header">
-          <h3>Incidents Timeline</h3>
-          <div class="meta">Reported spills, overfishing alerts, seismic stress events</div>
-        </div>
-        <div id="incidents" class="timeline"></div>
-      </div>
-
-      <div class="card">
-        <div class="card-header">
-          <h3>Energy Mix</h3>
-          <div class="meta">Solar topside, tidal, thermal, diesel backup</div>
-        </div>
-        <canvas id="energyChart" height="100"></canvas>
-      </div>
-
-      <div class="card">
-        <div class="card-header">
-          <h3>Desalination & Wastewater</h3>
-          <div class="meta">Daily throughput vs. reclaimed (%)</div>
-        </div>
-        <canvas id="waterChart" height="100"></canvas>
-      </div>
-
-      <div class="card">
-        <div class="card-header">
-          <h3>O2 / CO2 Levels</h3>
-          <div class="meta">Dissolved O2 (mg/L) vs. CO2 (ppm)</div>
-        </div>
-        <canvas id="gasChart" height="100"></canvas>
-      </div>
-
-      <div class="card">
-        <div class="card-header">
-          <h3>Occupancy & Consumption</h3>
-          <div class="meta">Population, kWh per capita, protein intake</div>
-        </div>
-        <canvas id="occupancyChart" height="100"></canvas>
-      </div>
-
-      <div class="card wide">
-        <div class="card-header">
-          <h3>Compliance Watchlist</h3>
-          <div class="meta">Sites nearing regulatory thresholds</div>
-        </div>
-        <div class="table-wrap">
-          <table class="data-table" id="watchlist">
-            <thead>
-              <tr>
-                <th>Site</th>
-                <th>Region</th>
-                <th>Toxin</th>
-                <th>Fish Stock</th>
-                <th>Reef Health</th>
-                <th>Risk</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <span>Fictional data for class mock trial. Not real measurements.</span>
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-  <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Ocean Settlements – Environmental Dashboard</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
